completed week 4, ci-cd.yml file was added