@@ -5,7 +5,7 @@
 <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.2.0</version>
+    <version>3.4.1</version>
     <relativePath/>
 </parent>
 
@@ -82,20 +82,6 @@
         <scope>test</scope>
     </dependency>
 
-    <dependency>
-        <groupId>net.bytebuddy</groupId>
-        <artifactId>byte-buddy</artifactId>
-        <version>1.15.11</version>
-        <scope>test</scope>
-    </dependency>
-
-    <dependency>
-        <groupId>net.bytebuddy</groupId>
-        <artifactId>byte-buddy-agent</artifactId>
-        <version>1.15.11</version>
-        <scope>test</scope>
-    </dependency>
-
 </dependencies>
 <build>
     <plugins>
@@ -110,39 +96,6 @@
                 <source>21</source>
                 <target>21</target>
                 <fork>true</fork>
-            </configuration>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-                <argLine>
-                    -XX:+EnableDynamicAgentLoading
-                    -Xshare:off
-                </argLine>
-            </configuration>
-        </plugin>
-        <plugin>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>21</source>
-                <target>21</target>
-                <fork>true</fork>
-            </configuration>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-                <argLine>
-                    -XX:+EnableDynamicAgentLoading
-                    -Xshare:off
-                </argLine>
             </configuration>
         </plugin>
     </plugins>
